# mcp-shared-browser

./: Dockerfile  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml  verify_agent_mcp.py
adapters/: __init__.py  noop_display.py  playwright_browser.py  xvfb_display.py
delivery/: __init__.py  app.py  factories.py
domain/: __init__.py
infrastructure/: __init__.py  playwright_browser.py
interfaces/: __init__.py  browser.py
ports/: __init__.py  browser.py  virtual_display.py
tests/: conftest.py
tests/adapters/: test_playwright_browser.py
tests/delivery/: test_lifespan.py  test_tools.py
tests/integration/: conftest.py  test_mcp_search.py
tests/llama/: conftest.py  test_llama_connection.py
tests/utils/: __init__.py  agent.py  mcp_config.py
usecase/: __init__.py
